# python-selenium-concepts

./: .gitignore  README.md  config.json  pyproject.toml
base/: base_driver.py
configuration/: config.ini
pages/: BasePage.py  base_page.py  base_page_cls.py  google_home_page.py  google_home_page_nav.py  google_search_results_page.py  login_page.py  python_pages.py
pages_alt/: about_page.py  headernav.py
pages_alt/base/: pagebase.py
results/pytest-html/: report_2022_12_10.html
testdata/: dev_test_data.json  stage_test_data.json  testdata.json  testdata.yaml  testdata_class.yaml
tests/: base_test.py  conftest.py  test_action_chains.py  test_basic_selenium.py  test_google_search.py  test_google_search_class.py  test_google_search_data_driven.py  test_javascript_execution.py  test_keyboard_mouse_actions.py  test_locate_basics.py  test_locate_css.py  test_locate_xpath.py  test_location_css_selector.py  test_locators.py  test_locators_new.py  test_logging.py  test_login.py  test_screenshots.py  test_screenshots_ocr.py  test_tabs_windows_dialogs.py  test_wait_strategies.py  test_webdriver_methods.py
tests/test_html_elements/: test_select_dropdown.py  test_tabs_and_windows.py
utilities/: custom_logger.py  highlighter.py  logger.py  read_properties.py  utils.py
