[tool.poetry]
name = "python-selenium"
version = "0.1.0"
description = "Demo of a Python Selenium project"
authors = ["Joe"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
selenium = "^4.3.0"
pytest = "^7.1.2"
webdriver-manager = "^3.8.1"
ddt = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
