[tool.poetry]
name = "python-selenium"
version = "0.1.0"
description = "Demo of a Python Selenium project"
authors = ["Joe"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
pillow = "^10.0.1"
pytesseract = "^0.3.10"
easyocr = "^1.7.1"

[tool.poetry.dev-dependencies]
selenium = "^4.13.0"
pytest = "^7.4.2"
webdriver-manager = "^4.0.1"
ddt = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest-html = "^4.0.2"
pytest-xdist = "^3.1.1"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
